--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-admin": "^5.5.2",
     "react-bootstrap": "^2.10.7",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -40,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "^4.9.5"
   }
 }
